--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -133,7 +133,7 @@ img { -ms-interpolation-mode: bicubic; }
     padding-top: 25px;
 }
 
-.mainnav { display: block; margin-left: 0; margin-right: 0; max-width: none; padding: 0; text-align: center; width: 100%; }
+/*.mainnav { display: block; margin-left: 0; margin-right: 0; max-width: none; padding: 0; text-align: center; width: 100%; }
 .mainnav ul { display: inline-block; list-style: none; margin: 0 auto; padding: 0; width: auto; }
 .mainnav ul li { display: inline-block; float: left; font-size: 1.4em; text-align: center; width: auto; }
 .mainnav ul li a { display: inline-block; padding-bottom: 1em; padding-top: 1em; padding-left: 2em; padding-right: 2em; }
@@ -145,7 +145,7 @@ input[type="search"] {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-}
+}*/
 
 .nav {
     position: relative;
