--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -184,18 +184,37 @@ h1 {
 	bottom: 0; left: 0;
 	background: rgb(84, 112, 128);
 	color: rgb(255, 255, 255);
-	height: 100px;
 	width: 100%;
 }
+	.footer .columns {
+		height: 140px;
+	}
 	.footer .columns p {
 		margin-bottom: 0;
 		margin-top: 20px;
 		text-align: left;
 	}
+	.footer #scrolltotop {
+		position: fixed;
+		bottom: 20px; right: 20px;
+		background: url('../images/scroll-to-top.png') no-repeat;
+		display: block;
+		height: 90px;
+		width: 82px;
+
+		overflow: hidden;
+		text-indent: 100%;
+		white-space: nowrap;
+	}
 
 @media only screen and (max-width: 1024px) {
 	.row {
 
+	}
+	.masthead,
+	.footer {
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 	.accordion > h3 {
 		background: url('../images/bg_tab-expanded-services.png') no-repeat;
@@ -203,14 +222,25 @@ h1 {
 	#contact {
 		padding-bottom: 0;
 	}
+}
+
+@media only screen and (max-width: 768px) {
 	.footer {
-		position: static;
+		position: relative;
+	}
+	.footer #scrolltotop {
+		position: absolute;
+		right: 0;
 	}
 }
 
 @media only screen and (max-width: 767px) {
 	.section {
 		min-height: 0;
+	}
+	.row {
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 	.masthead {
         height: auto;
@@ -221,27 +251,15 @@ h1 {
     #phone-fax > div {
 		width: 71.4%;
 	}
-}
-
-@media only screen and (max-width: 480px) {
 	.accordion > div ul {
-		float: none;
+		float: left;
+		list-style-position: outside;
+		margin-right: 5%;
+		width: 90%;
 	}
 }
 
-@media only screen and (min-width: 768px) {
-	#about div.eighteen div.row {
-		background: url('../images/bg_figure-tiled.png');
-	}
-}
-
-@media only screen and (max-width: 1023px) {
-	.masthead,
-	.section,
-	.footer {
-		padding-left: 20px;
-		padding-right: 20px;
-	}
+@media only screen and (max-width: 767px) {
 		#contact {
 			padding-left: 0;
 			padding-right: 0;
@@ -255,6 +273,18 @@ h1 {
 			min-height: 0;
 			padding-bottom: 0;*/
 		}
+}
+
+@media only screen and (max-width: 480px) {
+	.accordion > div ul {
+		float: none;
+	}
+}
+
+@media only screen and (min-width: 769px) {
+	#about div.eighteen div.row {
+		background: url('../images/bg_figure-tiled.png');
+	}
 }
 
 @media only screen and (min-width: 1024px) {
