--- a/public/css/scroll.css
+++ b/public/css/scroll.css
@@ -33,6 +33,7 @@
     }
     #clients {
         z-index: 500;
+        height: 1680px !important;
     }
     #publications {
         z-index: 400;
