--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -2,9 +2,23 @@ body {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+div[role=navigation] a {
+	font-family: "proxima-nova", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: 600;
+	letter-spacing: 1px;
+	-webkit-font-smoothing: antialiased;
+}
+
+h1 {
+	font-family: "museo", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
 h2 {
+	font-family: "museo-sans-rounded", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 6em;
-	font-weight: normal;
+	font-weight: 100;
 }
 
 p {
@@ -62,8 +76,9 @@ p.subhead {
 }
 #expertise h3 {
 	color: rgb(116, 118, 120);
+	font-family: "museo", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 1.9em;
-	font-weight: normal;
+	font-weight: 300;
 	text-transform: uppercase;
 }
 
@@ -76,8 +91,9 @@ p.subhead {
 }
 #services .tabs h3 {
 	color: rgb(255, 255, 255);
+	font-family: "museo-sans-rounded", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 3em;
-	font-weight: normal;
+	font-weight: 100;
 	text-align: left;
 }
 
@@ -88,6 +104,19 @@ p.subhead {
 
 #publications h2 {
 	color: rgb(146, 205, 211);
+	margin-bottom: 180px;
+}
+#publications h3 {
+	margin-bottom: .5em;
+}
+#publications h4 {
+	color: rgb(69, 91, 104);
+}
+#publications p {
+	color: rgb(69, 91, 104);
+}
+#publications p.date {
+	color: rgb(69, 91, 104);
 }
 
 #contact h2 {
@@ -98,6 +127,15 @@ p.subhead {
 	font-size: 1.2em;
 	font-weight: 700;
 	text-transform: uppercase;
+}
+
+.contact-info p {
+	font-family: "museo", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: 300;
+}
+.contact-info a {
+	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
 }
 
 @media only screen and (max-width: 1024px) {
