--- a/public/css/orbit.css
+++ b/public/css/orbit.css
@@ -37,13 +37,16 @@ div.orbit-wrapper div.timer:hover span.pause, div.orbit-wrapper span.pause.activ
 .orbit-wrapper .orbit-caption { background: #000; background: rgba(0, 0, 0, 0.6); z-index: 430; color: #fff; text-align: center; padding: 7px 0; font-size: 13px; font-size: 1.3rem; position: absolute; right: 0; bottom: 0; width: 100%; }
 
 /* Directional Nav ---------------------- */
-div.orbit-wrapper div.slider-nav { display: block; }
+div.orbit-wrapper div.slider-nav { display: block; width:80%; position:absolute; left:50%; margin-left:-40%; border-top:1px solid #dee0e0; z-index:430; height:64px; bottom: 50px; }
+#publications div.orbit-wrapper div.slider-nav {
+    border-color:rgb(146, 191, 196);
+}
 
-div.orbit-wrapper div.slider-nav span { width: 26px; height: 49px; text-indent: -9999px; position: absolute; z-index: 430; bottom: 50px; /*margin-top: -25px;*/ cursor: pointer; }
+div.orbit-wrapper div.slider-nav span { width: 26px; height: 49px; text-indent: -9999px; position: absolute; z-index: 430; bottom: 0; /*margin-top: -25px;*/ cursor: pointer; }
 
-div.orbit-wrapper div.slider-nav span.right { background: url('/images/slide_arrow-left.png'); background-size: 100%; right: 300px; }
+div.orbit-wrapper div.slider-nav span.right { background: url('/images/slide_arrow-left.png'); background-size: 100%; right: 20%; }
 
-div.orbit-wrapper div.slider-nav span.left { background: url('/images/slide_arrow-right.png'); background-size: 100%; left: 300px; }
+div.orbit-wrapper div.slider-nav span.left { background: url('/images/slide_arrow-right.png'); background-size: 100%; left: 20%; }
 
 .lt-ie9 div.orbit-wrapper div.slider-nav span.right { background: url('../images/foundation/orbit/right-arrow-small.png'); }
 .lt-ie9 div.orbit-wrapper div.slider-nav span.left { background: url('../images/foundation/orbit/left-arrow-small.png'); }
