--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -13,6 +13,8 @@ h1 {
 	font-family: "museo", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 700;
 	text-transform: uppercase;
+	letter-spacing:1px;
+	-webkit-font-smoothing:antialiased;
 }
 
 h2 {
@@ -104,7 +106,6 @@ p.subhead {
 
 #publications h2 {
 	color: rgb(146, 205, 211);
-	margin-bottom: 180px;
 }
 #publications h3 {
 	margin-bottom: .5em;
