--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -39,14 +39,24 @@ h1 {
 }
 .scrolldown {
 	position:absolute;
-	width:80px;
-	height:0;
-	padding-top:91px;
-	overflow:hidden;
 	background:url("../images/scroll-to-learn-more.png") no-repeat 0 0;
 	top:423px;
 	right:10px;
+	color: rgb(255, 255, 255);
+	display: block;
+	font-size: 1.1em;
+	font-weight: bold;
+	height: 91px;
+	padding: 10px 10px 0;
+	text-align: center;
+	text-decoration: none;
+	width: 80px;
+	text-align:center;
+	-webkit-font-smoothing:antialiased;
 }
+	.scrolldown em {
+		display:block;
+	}
 
 .section {
 	/*min-height: 780px;*/
@@ -370,11 +380,12 @@ h1 {
 		display: block;
 		font-size: 1.1em;
 		font-weight: bold;
-		height: 90px;
-		padding: 20px 26px 0;
+		height: 89px;
+		padding: 28px 26px 0;
 		text-align: center;
 		text-decoration: none;
-		width: 82px;
+		width: 80px;
+		-webkit-font-smoothing:antialiased;
 	}
 
 /* Reveal modal overlay styles */
