Tweaking styles for subhead (reducing weight slightly, more letter-spacing)

--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -30,7 +30,8 @@ figcaption p {
 	line-height: 1.3em;
 }
 p.subhead {
-	font-weight: bold;
+	font-weight: 600;
+	letter-spacing:1px;
 }
 
 #intro h2 {
