--- a/public/css/typography.less
+++ b/public/css/typography.less
@@ -82,7 +82,7 @@ p.subhead {
 #expertise h2 {
 	color: rgb(115, 127, 131);
 }
-#expertise p {
+#expertise p.intro {
 	color: rgb(115, 127, 131);
 	font-size: 1.6em;
 }
@@ -148,28 +148,4 @@ p.subhead {
 .contact-info a {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
-}
-
-@media only screen and (max-width: 1024px) {
-	#services .tabs h3 {
-		font-size: 1.5em;
-		overflow: hidden;
-	}
-}
-
-@media only screen and (max-width: 767px) {
-	.section {
-		padding-bottom: 2em;
-	}
-	h2,
-	#intro h2 {
-		font-size: 4em;
-		margin-bottom: 1.6667em;
-	}
-}
-
-@media only screen and (max-width: 480px) {
-	#services .tabs h3 {
-		font-size: 1.3em;
-	}
 }
