--- a/public/css/orbit.less
+++ b/public/css/orbit.less
@@ -78,6 +78,10 @@ ul.orbit-bullets li.active { color: #222; background-position: -8px 0; }
 ul.orbit-bullets li.active.has-thumb { background-position: 0 0; border-top: 2px solid #000; }
 
 /* Correct timer in IE */
-.lt-ie9 .timer { display: none !important; }
+.ie8 .timer { display: none !important; }
 
-.lt-ie9 div.caption { background: transparent; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000,endColorstr=#99000000); zoom: 1; }
+.ie8 div.caption {
+    background: transparent;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#990000,endColorstr=#990000);
+    zoom: 1;
+}
